--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
-    "name": "edgedb-mcp-server",
-    "version": "1.0.0",
-    "description": "MCP服务器示例项目",
+    "name": "@obiwan90/edgedb-mcp-server",
+    "version": "1.0.2",
+    "description": "edgedb mcp server",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/obiwan90/mcp-server-edgedb.git"
+    },
+    "files": [
+        "build",
+        "README.md"
+    ],
     "type": "module",
     "main": "build/index.js",
+    "bin": {
+        "edgedb-mcp-server": "build/cli.js"
+    },
     "scripts": {
         "build": "tsc",
         "start": "node build/index.js",
@@ -15,7 +26,7 @@
         "edgedb",
         "server"
     ],
-    "author": "",
+    "author": "obiwan90 <obiwanycj@gmail.com>",
     "license": "MIT",
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.11.0",
